--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
 <link rel="stylesheet" href="homestyle.css">
 
 <div class="topnav" id="myTopnav" onclick="myFunction()">
-  <a href="#home" class="btn active">Αρχική</a>
-  <a href="#apps" class="btn">Εφαρμογές</a>
+  <a href="#home" class="btn active" onclick="homeClick()">Αρχική</a>
+  <a href="#apps" class="btn" onclick="appsClick()">Εφαρμογές</a>
   <a href="#contact" class="btn">Contact</a>
   <a href="#about" class="btn">About</a>
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <i class="fa fa-bars"></i>
-  </a>
 </div>
   
+<iframe id="myFrame" src="home_page.html"></iframe>
+
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
 
