--- a/home_page.html
+++ b/home_page.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+            <!-- Responsive Web Design -->
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
-        <h1>Αρχική</h1>
-        <p>This is a paragraph.</p>
+        <link rel="stylesheet" href="home_page_style.css">
+
+        <div class="image-container">
+            <img class="image" src="images/Auto_Device_Shutdown_Logo_App5.png">
+            <div class="title">Auto Device Shutdown</div>
+            <div class="description">Αυτή είναι η περιγραφή της πρώτης εικόνας.</div>
+        </div>
+        <div class="image-container">
+            <img class="image" src="images/Apergies_Logo_App.jpg">
+            <div class="title">Απεργίες</div>
+            <div class="description">Αυτή είναι η περιγραφή της πρώτης εικόνας.</div>
+        </div>
+        <div class="image-container">
+            <img class="image" src="images/Giortes_Logo_App.png">
+            <div class="title">Γιορτές</div>
+            <div class="description">Αυτή είναι η περιγραφή της πρώτης εικόνας.</div>
+        </div>
     </body>
 </html>
