--- a/apps_page.html
+++ b/apps_page.html
@@ -8,20 +8,22 @@
     <body>
         <link rel="stylesheet" href="apps_page_style.css">
 
-        <div class="image-container">
-            <img class="image" src="images/Auto_Device_Shutdown_Logo_App5.png">
-            <div class="title">Auto Device Shutdown</div>
-            <div class="description">Αυτή είναι η περιγραφή της πρώτης εικόνας.</div>
-        </div>
-        <div class="image-container">
-            <img class="image" src="images/Apergies_Logo_App.jpg">
-            <div class="title">Απεργίες</div>
-            <div class="description">Αυτή είναι η περιγραφή της πρώτης εικόνας.</div>
-        </div>
-        <div class="image-container">
-            <img class="image" src="images/Giortes_Logo_App.png">
-            <div class="title">Γιορτές</div>
-            <div class="description">Αυτή είναι η περιγραφή της πρώτης εικόνας.</div>
+        <div class="row">
+            <div class="column">
+                <img class="image" src="images/Auto_Device_Shutdown_Logo_App5.png">
+                <div class="title">Auto Device Shutdown</div>
+                <div class="description">Αυτή είναι η περιγραφή της πρώτης εικόνας.</div>
+            </div>
+            <div class="column">
+                <img class="image" src="images/Apergies_Logo_App.jpg">
+                <div class="title">Απεργίες</div>
+                <div class="description">Αυτή είναι η περιγραφή της πρώτης εικόνας.</div>
+            </div>
+            <div class="column">
+                <img class="image" src="images/Giortes_Logo_App.png">
+                <div class="title">Γιορτές</div>
+                <div class="description">Αυτή είναι η περιγραφή της πρώτης εικόνας.</div>
+            </div>
         </div>
     </body>
 </html>
